// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image :base 1`] = `
<main>
  <t-image>
    <wx-view
      class="t-class t-image t-image__mask t-image--faild t-image--shape-square"
    >
      <wx-view
        class="t-class-load"
        style="font-size: 40rpx; color: #999"
      >
        <t-icon>
          <wx-label
            class="t-class t-icon t-icon-close t-icon-base"
            style=";;"
            bind:tap="onTap"
          />
        </t-icon>
      </wx-view>
    </wx-view>
    <wx-image
      class="t-class t-image t-image--shape-square"
      hidden="{{true}}"
      id="image"
      lazyLoad="{{false}}"
      mode="scaleToFill"
      showMenuByLongpress="{{false}}"
      src=""
      style=""
      webp="{{false}}"
      bind:error="onLoadError"
      bind:load="onLoaded"
    />
  </t-image>
</main>
`;

exports[`image :success 1`] = `
<main>
  <t-image
    id="root"
    bind:load="handleLoad"
  >
    <wx-image
      class="t-class t-image t-image--shape-square"
      hidden="{{false}}"
      id="image"
      lazyLoad="{{false}}"
      mode="heightFix"
      showMenuByLongpress="{{false}}"
      src="https://www.tencent.com/img/index/menu_logo.png"
      style="width: 0.00px;"
      webp="{{false}}"
      bind:error="onLoadError"
      bind:load="onLoaded"
    />
  </t-image>
</main>
`;
